force-app/main/default/objects/custom_create226__c/custom_create226__c.object-meta.xml
<CustomObject>
    <label>Custom created object226</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects226</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>