force-app/main/default/objects/custom_create226__c/fields/custom_create_226field603__c.field-meta.xml
<CustomField>
    <fullName>custom_create_226field603__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 226field603</label>
    <type>Checkbox</type>
</CustomField>